# mcp-server-indy-compta

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
src/mcp_server_indy_compta/: __init__.py  __main__.py  indy_client.py  mcp_server.py
tests/: conftest.py  test_indy_client.py  test_mcp_tools.py
